@@ -90,10 +90,16 @@ default for system option "system_heaps" that determines the heap
 storage directory for "isabelle build". Option "-n" is now clearly
 separated from option "-s".
 
+* Isabelle DejaVu fonts are available with hinting by default, which is
+relevant for low-resolution displays. This may be disabled via system
+option "isabelle_fonts_hinted = false" in
+$ISABELLE_HOME_USER/etc/settings -- it occasionally yields better
+results.
+
 * OpenJDK 11 has quite different font rendering, with better glyph
 shapes and improved sub-pixel anti-aliasing. In some situations results
-might be *worse* than Oracle Java 8, though. A decent HiDPI display is
-recommended.
+might be *worse* than Oracle Java 8, though -- a proper HiDPI / UHD
+display is recommended.
 
 
 *** Document preparation ***
